1.替换了iniparser-4.1版本，可以正常解析； 2.加入了ini配置文件；

--- a/scene_auto.vcxproj
+++ b/scene_auto.vcxproj
@@ -81,6 +81,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>pthread.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
